--- a/order-service/order-service/src/main/resources/application.yaml
+++ b/order-service/order-service/src/main/resources/application.yaml
@@ -3,3 +3,16 @@ spring:
         name:  order-service
     config:
         import: "optional:configserver:http://localhost:8088"
+server:
+    port: 8081
+spring: 
+    application: 
+        name: order-service
+    config:
+        import: "optional:configserver:http://localhost:8888"
+eureka:
+    instance: 
+        hostname: localhost
+    client: 
+        serviceUrl: 
+            defaultZone : http://${eureka.instance.hostname}:8761/eureka/
