--- a/service-registry/src/main/resources/application.yaml
+++ b/service-registry/src/main/resources/application.yaml
@@ -1,13 +1,5 @@
-server:
-  port: 8761
 spring:
+  config:
+    import: optional:configserver:http://localhost:8088
   application:
-    name: service-registry
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    name: discovery
