Update configuration URLs and dependencies

--- a/config-server/src/main/resources/configurations/courtiers.yaml
+++ b/config-server/src/main/resources/configurations/courtiers.yaml
@@ -23,7 +23,7 @@ spring:
 
 application:
   config:
-    orders-url: http://localhost:8222/api/v1/orders
+    orders-url: http://localhost:8222/api/v1/courtiers
 
 management:
   tracing:
