--- a/config-server/src/main/resources/configurations/orders.yaml
+++ b/config-server/src/main/resources/configurations/orders.yaml
@@ -21,6 +21,10 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
+application:
+  config:
+    restaurants-url: http://localhost:8222/api/v1/restaurants
+
 management:
   tracing:
     sampling:
