--- a/config-server/src/main/resources/configurations/kitchens.yaml
+++ b/config-server/src/main/resources/configurations/kitchens.yaml
@@ -12,7 +12,7 @@ spring:
     name: kitchens
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/kitchens
+    url: jdbc:postgresql://localhost:5432/tickets
     username: username
     password: password
   jpa:
